Fixed the visual appearance of chart on iphone

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -15,6 +15,13 @@ img {
 /**
  * Chart styling
  */
+.chart-wrapper {
+	overflow: hidden;
+	height: 160px;
+}
+
+#timer-chart {
+}
 
 
 /**
